# ryzenai-sd-server

./: .gitignore  CMakeLists.txt  README.md  build.bat  config.json
.github/workflows/: build_and_release.yml
docs/: ARCHITECTURE.md
include/sd/: clip_tokenizer.h  config_loader.h  controlnet_runner.h  http_server.h  i_denoiser.h  i_text_encoder.h  i_vae_decoder.h  onnx_model.h  scheduler.h  sd_model.h  sd_pipeline.h  sd_types.h  variant_factory.h  variant_registry.h
include/sd/variants/: generic_denoiser.h  sd15_denoiser.h  sd15_text_encoder.h  sd15_vae_decoder.h  sd3_denoiser.h  sd3_text_encoder.h  sd3_vae_decoder.h  sdxl_denoiser.h  sdxl_text_encoder.h  sdxl_vae_decoder.h
src/: clip_tokenizer.cpp  config_loader.cpp  controlnet_runner.cpp  http_server.cpp  main.cpp  onnx_model.cpp  scheduler.cpp  sd_pipeline.cpp  variant_registry.cpp
src/variants/: generic_denoiser.cpp  sd15_denoiser.cpp  sd15_text_encoder.cpp  sd15_vae_decoder.cpp  sd15_variant.cpp  sd3_denoiser.cpp  sd3_text_encoder.cpp  sd3_vae_decoder.cpp  sd3_variant.cpp  sdxl_denoiser.cpp  sdxl_text_encoder.cpp  sdxl_vae_decoder.cpp  sdxl_variant.cpp
test/: README.md  models.json  requirements.txt  test_server.py
